--- a/result.tex
+++ b/result.tex
@@ -892,13 +892,13 @@ The colours and numbering from 1 to 6 denote the band gaps. Mie resonances are o
 \paragraph{Continuous scan through the unit cell sizes}%{{{
 For illustration, we add a high-resolution continuous scan through the unit cell size $a$ in Fig. \ref{fg_spacingscan100}, with other parameters shared with the previous plots in Fig. \ref{fg_erods_acomparison}. The individual Mie resonances can be identified as the sets of points where transmittance $|t|$ comes close to zero, real part of effective index of refraction $\Neff'$ drops and its imaginary part $\Neff''$ has a sharp peak. The photonic band gaps are all areas where $\Neff'' \not\approx 0$ in Fig. \ref{fg_spacingscan100}d.
 
-For easier interpretation, the peculiar interplay of the individual resonances and the band gaps is redrawn in Fig. \ref{fg_drawn100}, where each photonic band gap is represented by a coloured area and the individual resonances by thick black lines. The small black patch between the first and second band gaps covers the range conditions necessary for reaching $\Neff'<0$, provided that the dielectric is titanium dioxide with permittivity $\epsrl \approx 92$. 
+For easier interpretation, the peculiar interplay of the individual resonances and the band gaps is redrawn in Fig. \ref{fg_drawn100}, where each photonic band gap is represented as a coloured area and the individual resonances as thick black lines. The small black patch between the first and second band gaps covers the range conditions necessary for reaching $\Neff'<0$, provided that the dielectric is titanium dioxide with permittivity $\epsrl \approx 92$. 
 
-In accordance with the previous discussion, the electric and magnetic Mie resonances approach each other when the unit cell size $a$ decreases from 120 to 90 $\upmu$m, and eventually they meet and vanish for $a \lesssim 85$ $\upmu$m, forming an "U"-shaped curve. The choice of $a$ as the scanning parameter enables to clearly illustrate this phenomenon; on the contrary, the frequencies of the band gaps roughly follow the $1/a$ curves. The central frequency and width are strongly influenced by the individual resonances, in order to satisfy the rule of each individual resonance being "dressed" in a band gap.
+In accordance with the previous discussion, the electric and magnetic Mie resonances approach each other when the unit cell size $a$ decreases from 120 to 90 $\upmu$m, and eventually they meet and vanish for $a \lesssim 85$ $\upmu$m, forming an "U"-shaped curve. Using $a$ as the scanning parameter enables to clearly illustrate the shift of individual resonances. With this choice, the frequencies of the band gaps roughly follow the $1/a$ curves, but they are strongly influenced by the individual resonances. Each individual resonance is always contained inside a band gap.
 
-In the  with low-enough losses, the index of refraction grows as a function of frequency in all photonic bands. From the beginning to the end of each photonic band, it gains a difference of one Brillouin zone. The only way how its value decreases is by means of an individual resonance. A simple arithmetic rule for reaching negative index of refraction $\Neff'(f_1)$, at a given frequency $f_1$, is therefore that the number of photonic band gaps counted from $f=0$ to $f_1$ must be strictly less than the number of individual resonances. 
+In photonic bands, the real part of refractive index grows as a function of frequency; from the beginning to the end of each photonic band, it gains a difference of one Brillouin zone. The only way how $\Neff'$ can descend by one Brillouin-zone boundary is by means of an individual resonance. A simple arithmetic rule for reaching negative index of refraction $\Neff'(f_1)<0$, at a given frequency $f_1$, is therefore that the number of photonic band gaps counted from $f=0$ to $f_1$ must be strictly less than the number of individual resonances. 
 %(Author conjectures that the presence of two Mie resonances in the \textit{first} band gap in the spectrum is a necessary and sufficient condition for $\Neff'<0$ to occur.)
-This heuristics eliminates the possibility of attaining $\Neff'<0$ from any higher-order resonances, although they are clearly present in Figs. \ref{fg_spacingscan100} and \ref{fg_drawn100} and they even persist for smaller unit cell sizes.
+This simple rule eliminates the possibility of obtaining $\Neff'<0$ from any higher-order Mie resonances, although they can be shown to persist for smaller unit cell sizes than $a=85$ $\upmu$.  (Figs. \ref{fg_spacingscan100}, \ref{fg_drawn100})
 
 %}}}
 \begin{figure}[h!] % fg_fxplot %{{{
